style: fix league team component style width on mobile

--- a/app/views/components/league-team/league-team.styl
+++ b/app/views/components/league-team/league-team.styl
@@ -17,6 +17,7 @@
   gap 16px
   align-items center
   display flex
+  width 100%
   max-width 900px
 
   .MuiGrid-root.MuiGrid-item
